The rest of the html pages set up. I'm pretty sure this is the last thing I need for the deliverable.

--- a/accountsignedin.html
+++ b/accountsignedin.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Login</title>
     <link rel="icon" href="icon.ico" />
   </head>
   <body>
     <header>
-      <h1>Idle Garden</h1>
+      <h1>Account Info</h1>
 
       <nav>
         <menu>
@@ -24,12 +24,14 @@
     </header>
 
     <main>
-      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
-
-      <p>
-        Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
-      </p>
-    </main>
+        <h2>Activity</h2>
+        <div>Notifications will display here</div>
+        <div>
+          <form method="get" action="account.html">
+            <button>Sign Out</button>
+          </form>
+        </div>
+      </main>
 
     <footer>
       <hr />
