--- a/garden.html
+++ b/garden.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Garden</title>
     <link rel="icon" href="icon.ico" />
   </head>
   <body>
     <header>
-      <h1>Idle Garden</h1>
+      <h1>Garden</h1>
 
       <nav>
         <menu>
@@ -24,12 +24,15 @@
     </header>
 
     <main>
-      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
-
-      <p>
-        Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
-      </p>
-    </main>
+        <div>This is where the calls to a database will be. There will be the plant data and etc. that must be pulled from storage</div>
+        <div>
+            example plant
+        </div>
+        <div>
+            <image src="exampleplant.png" alt="insert plant here"></image>
+        </div>
+        <div>Time remaining "0:13:45"</div>
+      </main>
 
     <footer>
       <hr />
