--- a/trading.html
+++ b/trading.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Marketplace</title>
     <link rel="icon" href="icon.ico" />
   </head>
   <body>
     <header>
-      <h1>Idle Garden</h1>
+      <h1>Marketplace</h1>
 
       <nav>
         <menu>
@@ -24,12 +24,8 @@
     </header>
 
     <main>
-      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
-
-      <p>
-        Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
-      </p>
-    </main>
+        <div>There will be stuff here once I get WebSocket implemented.</div>
+      </main>
 
     <footer>
       <hr />
