--- a/account.html
+++ b/account.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Login</title>
     <link rel="icon" href="icon.ico" />
   </head>
   <body>
     <header>
-      <h1>Idle Garden</h1>
+      <h1>Account Info</h1>
 
       <nav>
         <menu>
@@ -24,12 +24,20 @@
     </header>
 
     <main>
-      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
-
-      <p>
-        Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
-      </p>
-    </main>
+    <div>When the user logs in, this main element will change to a notifications panel with a sign out button.</div>
+    <div>When I get to JavaScript, this page will automatically route to the signed-int version if the user is signed in.</div>
+        <h2>Login or Register to Idle Garden</h2>
+        <form method="get" action="accountsignedin.html">
+          <div>
+            <input type="text" placeholder="your@email.com" />
+          </div>
+          <div>
+            <input type="password" placeholder="password" />
+          </div>
+          <button type="submit">Login</button>
+          <button type="submit">Register</button>
+        </form>
+      </main>
 
     <footer>
       <hr />
