--- a/shop.html
+++ b/shop.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Shop</title>
     <link rel="icon" href="icon.ico" />
   </head>
   <body>
     <header>
-      <h1>Idle Garden</h1>
+      <h1>Shop</h1>
 
       <nav>
         <menu>
@@ -24,12 +24,11 @@
     </header>
 
     <main>
-      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
-
-      <p>
-        Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
-      </p>
-    </main>
+        <div><p>The shop will be more fully implemented once I start writing actual code, but the overall shape should look kinda like this:</p></div>
+        <div>plant for sale!</div>
+        <div><image src="exampleplant.png" alt="plant for sale did not load!"></image></div>
+        <div>$1,000,000</div>
+      </main>
 
     <footer>
       <hr />
