I had to make some changes for the README and grading requirements.

--- a/accountsignedin.html
+++ b/accountsignedin.html
@@ -37,7 +37,7 @@
       <hr />
       <span class="text-reset">Leif Nelson</span>
       <br />
-      <a href="https://github.com/Lmannumb/startup">GitHub</a>
+      <h3><a href="https://github.com/Lmannumb/startup">GitHub link</a></h3>
     </footer>
   </body>
 </html>
