--- a/garden.html
+++ b/garden.html
@@ -31,14 +31,15 @@
         <div>
             <image src="exampleplant.png" alt="insert plant here"></image>
         </div>
-        <div>Time remaining "0:13:45"</div>
+        <div>Time remaining: "0:13:45"</div>
+        <div>The system for calculating time away will use a 3rd party service.</div>
       </main>
 
     <footer>
       <hr />
       <span class="text-reset">Leif Nelson</span>
       <br />
-      <a href="https://github.com/Lmannumb/startup">GitHub</a>
+      <h3><a href="https://github.com/Lmannumb/startup">GitHub link</a></h3>
     </footer>
   </body>
 </html>
