--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="account.html">Login</a> (This text will change to the username when logged in)</li>
         </menu>
       </nav>
+      <div>This header will be edited when I do the CSS deliverable.</div>
 
       <hr />
     </header>
@@ -35,7 +36,7 @@
       <hr />
       <span class="text-reset">Leif Nelson</span>
       <br />
-      <a href="https://github.com/Lmannumb/startup">GitHub</a>
+      <h3><a href="https://github.com/Lmannumb/startup">GitHub link</a></h3>
     </footer>
   </body>
 </html>
