--- a/account.html
+++ b/account.html
@@ -25,7 +25,7 @@
 
     <main>
     <div>When the user logs in, this main element will change to a notifications panel with a sign out button.</div>
-    <div>When I get to JavaScript, this page will automatically route to the signed-int version if the user is signed in.</div>
+    <div>When I get to JavaScript, this page will automatically route to the signed-in version if the user is signed in.</div>
         <h2>Login or Register to Idle Garden</h2>
         <form method="get" action="accountsignedin.html">
           <div>
