--- a/index.html
+++ b/index.html
@@ -6,26 +6,34 @@
     <title>Home</title>
     <link rel="icon" href="icon.ico" />
     <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
+          crossorigin="anonymous"></script>
   </head>
-  <body>
-    <header>
-      <h1>Idle Garden</h1>
+  <body class="bg-dark text-light">
+    <header class="container-fluid">
+      <a class="navbar-brand" href="#">Idle Garden</a>
+      
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="trading.html">Trading</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="garden.html">Garden</a></li>
-          <li><a href="account.html">Login</a> (This text will change to the username when logged in)</li>
+      <nav class="navbar fixed-top navbar-dark">
+        <menu class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="trading.html">Trading</a></li>
+          <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+          <li class="nav-item"><a class="nav-link" href="garden.html">Garden</a></li>
+          <li class="nav-item"><a class="nav-link" href="account.html">Login</a></li>
         </menu>
       </nav>
-      <div>This header will be edited when I do the CSS deliverable.</div>
+      <!--<div>This header will be edited when I do the CSS deliverable.</div>-->
 
-      <hr />
+      <!--<hr />-->
     </header>
 
-    <main>
+    <main class="container-fluid bg-secondary text-center">
       <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
 
       <p>
@@ -33,7 +41,7 @@
       </p>
     </main>
 
-    <footer>
+    <footer class="bg-dark text-white-50">
       <hr />
       <span class="text-reset">Leif Nelson</span>
       <br />
