--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </head>
   <body class="bg-dark text-light">
     <header class="container-fluid">
-      <a class="navbar-brand" href="#">Idle Garden</a>
       
 
       <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">Idle Garden</a>
         <menu class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="trading.html">Trading</a></li>
@@ -36,16 +36,16 @@
     <main class="container-fluid bg-secondary text-center">
       <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
 
-      <p>
+      <div>
         Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
-      </p>
+      </div>
     </main>
 
     <footer class="bg-dark text-white-50">
-      <hr />
-      <span class="text-reset">Leif Nelson</span>
-      <br />
-      <h3><a href="https://github.com/Lmannumb/startup">GitHub link</a></h3>
+      <div class="container-fluid">
+        <span class="text-reset">Leif Nelson</span>
+        <a class="text-reset" href="https://github.com/Lmannumb/startup">GitHub link</a>
+      </div>
     </footer>
   </body>
 </html>
