--- a/trading.html
+++ b/trading.html
@@ -3,35 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marketplace</title>
+    <title>Trading</title>
     <link rel="icon" href="icon.ico" />
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
+          crossorigin="anonymous"></script>
   </head>
-  <body>
-    <header>
-      <h1>Marketplace</h1>
+  <body class="bg-dark text-light">
+    <header class="container-fluid">
+      
 
-      <nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="trading.html">Trading</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="garden.html">Garden</a></li>
-          <li><a href="account.html">Login</a> (This text will change to the username when logged in)</li>
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">Idle Garden</a>
+        <menu class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="trading.html">Trading</a></li>
+          <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+          <li class="nav-item"><a class="nav-link" href="garden.html">Garden</a></li>
+          <li class="nav-item"><a class="nav-link" href="account.html">Login</a></li>
         </menu>
       </nav>
+      <!--<div>This header will be edited when I do the CSS deliverable.</div>-->
 
-      <hr />
+      <!--<hr />-->
     </header>
 
-    <main>
+    <main class="container-fluid bg-secondary text-center">
         <div>There will be stuff here once I get WebSocket implemented.</div>
       </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Leif Nelson</span>
-      <br />
-      <h3><a href="https://github.com/Lmannumb/startup">GitHub link</a></h3>
-    </footer>
-  </body>
-</html>
+      <footer class="bg-dark text-white-50">
+        <div class="container-fluid">
+          <span class="text-reset">Leif Nelson</span>
+          <a class="text-reset" href="https://github.com/Lmannumb/startup">GitHub link</a>
+        </div>
+      </footer>
+    </body>
+  </html>
