changing some stuff

--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="container-fluid bg-secondary text-center">
-        <div><p>The shop will be more fully implemented once I start writing actual code, but the overall shape should look kinda like this:</p></div>
+        <!--<div><p>The shop will be more fully implemented once I start writing actual code, but the overall shape should look kinda like this:</p></div>-->
         <div>plant for sale!</div>
         <div><image src="exampleplant.png" alt="plant for sale did not load!"></image></div>
         <div>$1,000,000</div>
