--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trading</title>
+    <title>Home</title>
     <link rel="icon" href="icon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
           rel="stylesheet" 
@@ -22,7 +22,7 @@
         <a class="navbar-brand" href="#">Idle Garden</a>
         <menu class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="trading.html">Trading</a></li>
+          <li class="nav-item"><a class="nav-link" href="trading.html">Trading</a></li>
           <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
           <li class="nav-item"><a class="nav-link" href="garden.html">Garden</a></li>
           <li class="nav-item"><a class="nav-link" href="account.html">Login</a></li>
@@ -34,26 +34,18 @@
     </header>
 
     <main class="container-fluid bg-secondary text-center">
-        <div><h1>Trade History</h1></div>
-        <div><a href="chat.html">MoeLester</a></div>
-        <div><a href="chat.html">barrymikokinner</a></div>
-        <div><a href="chat.html">darkman42069</a></div>
-        <div><h1>Online</h1></div>
-        <div><a href="chat.html">BlueCat11</a></div>
-        <div><h1>Direct Connect</h1></div>
-        <form method="get" action="chat.html">
-          <div class="input-group mb-3">
-            <input class="form-control" type="text" placeholder="username" />
-          </div>
-          <button type="submit" class="btn btn-primary">Connect</button>
-        </form>
-      </main>
+      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
 
-      <footer class="bg-dark text-white-50">
-        <div class="container-fluid">
-          <span class="text-reset">Leif Nelson</span>
-          <a class="text-reset" href="https://github.com/Lmannumb/startup">GitHub link</a>
-        </div>
-      </footer>
-    </body>
-  </html>
+      <div>
+        Once texts have been sent back and forth, they will appear here.
+      </div>
+    </main>
+
+    <footer class="bg-dark text-white-50">
+      <div class="container-fluid">
+        <span class="text-reset">Leif Nelson</span>
+        <a class="text-reset" href="https://github.com/Lmannumb/startup">GitHub link</a>
+      </div>
+    </footer>
+  </body>
+</html>
