--- a/index.html
+++ b/index.html
@@ -35,9 +35,24 @@
 
     <main class="container-fluid bg-secondary text-center">
       <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
+      <h1 style="justify-content: center;">Welcome to Idle Garden!</h1>
+      <div><p>
+        Idle Garden is a game where you grow plants, and talk and trade with others. Start by creating an account at the login page and planting your first seed!
+      </p></div>
+      <div class="homepagestuff">
+        <div>
+          <h3>Buy seeds and grow plants</h3>
+          <div>
+          <img src="exampleplant.png" alt="image not found">
+        </div>
+        </div>
+        <div>
+          images n stuff
+        </div>
+        <div>
+          images n stuff
+        </div>
 
-      <div>
-        Idle Garden is a little game where you can grow plants, and talk and trade with others. Start by creating an account and planting your first seed!
       </div>
     </main>
 
