--- a/notification.html
+++ b/notification.html
@@ -34,13 +34,8 @@
     </header>
 
     <main class="container-fluid bg-secondary text-center">
-        <h2>Notifications</h2>
-        <div><a href="notification.html">New messages!</a></div>
-        <div>
-          <form method="get" action="account.html">
-            <button class="btn btn-primary">Sign Out</button>
-          </form>
-        </div>
+        <h2>New messages!</h2>
+        <div>New messages from <a href="chat.html">[Insert]</a> and others. Click link to view.</div>
       </main>
 
       <footer class="bg-dark text-white-50">
