--- a/garden.html
+++ b/garden.html
@@ -34,15 +34,15 @@
     </header>
 
     <main class="container-fluid bg-secondary text-center">
-        <div>This is where the calls to a database will be. There will be the plant data and etc. that must be pulled from storage</div>
-        <div>
-            example plant
-        </div>
+        <!--<div>This is where the calls to a database will be. There will be the plant data and etc. that must be pulled from storage</div>-->
+        <div><h3>
+            Basic Plant
+          </h3></div>
         <div>
             <image src="exampleplant.png" alt="insert plant here"></image>
         </div>
         <div>Time remaining: "0:13:45"</div>
-        <div>The system for calculating time away will use a 3rd party service.</div>
+        <!--<div>The system for calculating time away will use a 3rd party service.</div>-->
       </main>
 
       <footer class="bg-dark text-white-50">
