--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@
         </div>
         </div>
         <div>
-          images n stuff
+          <h3>Sell them to expand your ventures</h3>
+          <div>
+            <img src="money.png" alt="image not found" width="230" height="230">
+          </div>
         </div>
         <div>
-          images n stuff
+          <h3>Talk and trade with other players</h3>
+          <div>
+            <img src="speak.png" alt="image not found" width="230" height="240">
+          </div>
         </div>
 
       </div>
