--- a/index.html
+++ b/index.html
@@ -1,72 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link rel="icon" href="icon.ico" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-          rel="stylesheet" 
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-          crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
-          crossorigin="anonymous"></script>
+    <title>React Demo</title>
   </head>
-  <body class="bg-dark text-light">
-    <header class="container-fluid">
-      
-
-      <nav class="navbar fixed-top navbar-dark">
-        <a class="navbar-brand" href="#">Idle Garden</a>
-        <menu class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="trading.html">Trading</a></li>
-          <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
-          <li class="nav-item"><a class="nav-link" href="garden.html">Garden</a></li>
-          <li class="nav-item"><a class="nav-link" href="account.html">Login</a></li>
-        </menu>
-      </nav>
-      <!--<div>This header will be edited when I do the CSS deliverable.</div>-->
-
-      <!--<hr />-->
-    </header>
-
-    <main class="container-fluid bg-secondary text-center">
-      <!--<div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>-->
-      <h1 style="justify-content: center;">Welcome to Idle Garden!</h1>
-      <div><p>
-        Idle Garden is a game where you grow plants, and talk and trade with others. Start by creating an account at the login page and planting your first seed!
-      </p></div>
-      <div class="homepagestuff">
-        <div>
-          <h3>Buy seeds and grow plants</h3>
-          <div>
-          <img src="exampleplant.png" alt="image not found">
-        </div>
-        </div>
-        <div>
-          <h3>Sell them to expand your ventures</h3>
-          <div>
-            <img src="money.png" alt="image not found" width="230" height="230">
-          </div>
-        </div>
-        <div>
-          <h3>Talk and trade with other players</h3>
-          <div>
-            <img src="speak.png" alt="image not found" width="230" height="240">
-          </div>
-        </div>
-
-      </div>
-    </main>
-
-    <footer class="bg-dark text-white-50">
-      <div class="container-fluid">
-        <span class="text-reset">Leif Nelson</span>
-        <a class="text-reset" href="https://github.com/Lmannumb/startup">GitHub link</a>
-      </div>
-    </footer>
-  </body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/index.jsx"></script>
 </html>
